--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@
                <button class="contact__button" id="contact-button">Get in Touch</button>
             </div>
          </section>
-
+         <!--0b5f05f8-c564-4941-855e-b7d98536d4a3-->
          <div class="contact__overlay" id="contact-overlay"></div>
          <div class="contact__popup" id="contact-popup">
             <p class="contact__placeholder">Feel free to reach out to me for any inquiries or collaborations!</p>
-            <img src="assets/img/contact-extra.jpg" alt="Extra Picture" class="contact__extra-picture">
-            <form action="https://formspree.io/f/berch730@gmail.com" method="POST" class="contact__form">
+            <form action="https://api.web3forms.com/submit" method="POST" class="contact__form">
+               <input type="hidden" name="access_key" value="0b5f05f8-c564-4941-855e-b7d98536d4a3">
                <div class="contact__form-group">
                   <label for="name" class="contact__form-label">Name</label>
                   <input type="text" id="name" name="name" class="contact__form-input" required>
