--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </h2>
             <div class="projects__container">
 
-               <article class="projects__card">
+               <article class="projects__card projects__card--hover">
                   <div class="projects__image">
                      <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
 
@@ -185,7 +185,7 @@
                   </div>
                </article>
 
-               <article class="projects__card">
+               <article class="projects__card projects__card--hover">
                   <div class="projects__image">
                      <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
 
@@ -209,7 +209,7 @@
                   </div>
                </article>
 
-               <article class="projects__card">
+               <article class="projects__card projects__card--hover">
                   <div class="projects__image">
                      <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
 
@@ -235,7 +235,7 @@
                   </div>
                </article>
 
-               <article class="projects__card">
+               <article class="projects__card projects__card--hover">
                   <div class="projects__image">
                      <img src="assets/img/project-4.jpg" alt="image" class="projects__img">
 
@@ -262,7 +262,7 @@
                   </div>
                </article>
 
-               <article class="projects__card">
+               <article class="projects__card projects__card--hover">
                   <div class="projects__image">
                      <img src="assets/img/project-5.jpg" alt="image" class="projects__img">
 
@@ -286,7 +286,7 @@
                   </div>
                </article>
 
-               <article class="projects__card">
+               <article class="projects__card projects__card--hover">
                   <div class="projects__image">
                      <img src="assets/img/project-6.jpg" alt="image" class="projects__img">
 
