--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
                      <h2 class="projects__title" style="text-align: center;">Interactivity Course Journal</h2>
    
                      <p class="projects__description">
-                        <li>Module 1: Exploring expressivity with point lights.</li>
-                        <li>Module 2: Nuanced control with sound.</li>
-                        <li>Module 3: Kinaesthetic Interaction & Machine Learning.</li>
+                        Module 1: Exploring expressivity with point lights.<br>
+                        Module 2: Nuanced control with sound.<br>
+                        Module 3: Kinaesthetic Interaction & Machine Learning.
                      </p>
                   </div>
                   <div class="projects__buttons">
@@ -249,10 +249,10 @@
                      <h2 class="projects__title" style="text-align: center;">Tangible and Embodied Interaction(TEI) Course Journal</h2>
    
                      <p class="projects__description">
-                        <li>Module 1: Glanceability</li>
-                        <li>Module 2: Smell and Vortex Propagation</li>
-                        <li>Module 3: Soft</li>
-                        <li>Module 4: IoT & AI</li>
+                        Module 1: Glanceability<br>
+                        Module 2: Smell and Vortex Propagation<br>
+                        Module 3: Soft<br>
+                        Module 4: IoT & AI
                      </p>
                   </div>
                   <div class="projects__buttons">
@@ -276,7 +276,7 @@
                      <h2 class="projects__title" style="text-align: center;">Mathendahl, Niederkorn, Luxembourg</h2>
    
                      <p class="projects__description">
-                        <li>Project for Agence d'Architecture Stan Berbec</li>
+                        Project for Agence d'Architecture Stan Berbec
                      </p>
                   </div>
                   <div class="projects__buttons">
@@ -300,8 +300,8 @@
                      <h2 class="projects__title" style="text-align: center;">Pfaffenthal, Luxembourg</h2>
    
                      <p class="projects__description">
-                        <li>Iterative Design in 2D, modifying plans according to stakeholders needs.</li>
-                        <li>Modelling in 3D to help stakeholders visualise project.</li>
+                        Iterative Design in 2D, modifying plans according to stakeholders needs.<br>
+                        Modelling in 3D to help stakeholders visualise project.
                      </p>
                   </div>
                   <div class="projects__buttons">
