--- a/index.html
+++ b/index.html
@@ -312,6 +312,83 @@
                </article>
 
             </div>
+
+            <div class="projects__gallery">
+                <button class="projects__gallery-arrow projects__gallery-arrow--left" id="gallery-arrow-left">
+                    <i class="ri-arrow-left-s-line"></i>
+                </button>
+                <div class="projects__gallery-container" id="projects-gallery-container">
+                    <article class="projects__card projects__card--hover">
+                        <div class="projects__image">
+                            <img src="assets/img/project-4.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-4-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Tangible and Embodied Interaction(TEI) Course Journal</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">Hand-in PDF Archive</h3>
+                            <p class="projects__description">
+                                Module 1: Glanceability<br>
+                                Module 2: Smell and Vortex Propagation<br>
+                                Module 3: Soft<br>
+                                Module 4: IoT & AI
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </article>
+        
+                    <article class="projects__card projects__card--hover">
+                        <div class="projects__image">
+                            <img src="assets/img/project-5.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-5-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Mathendahl, Niederkorn, Luxembourg</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">3D Visualisations</h3>
+                            <p class="projects__description">
+                                Project for Agence d'Architecture Stan Berbec
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </article>
+        
+                    <article class="projects__card projects__card--hover">
+                        <div class="projects__image">
+                            <img src="assets/img/project-6.jpg" alt="image" class="projects__img">
+                            <a href="https://berbec-chris.github.io/assets/pages/project-6-page.pdf" target="_blank" class="projects__button button">
+                                <i class="ri-arrow-right-up-line"></i>
+                            </a>
+                        </div>
+                        <div class="projects__content">
+                            <h2 class="projects__title" style="text-align: center;">Pfaffenthal, Luxembourg</h2>
+                            <h3 class="projects__subtitle" style="text-align: center;">2D Blueprints, 3D Visualisations</h3>
+                            <p class="projects__description">
+                                Iterative Design in 2D, modifying plans according to stakeholders needs.<br>
+                                Modelling in 3D to help stakeholders visualise project.
+                            </p>
+                        </div>
+                        <div class="projects__buttons">
+                            <a href="https://github.com/Berbec-Chris/berbec-chris.github.io/tree/main" target="_blank" class="projects__link">
+                                <i class="ri-github-line"></i>
+                            </a>
+                        </div>
+                    </article>
+                </div>
+                <button class="projects__gallery-arrow projects__gallery-arrow--right" id="gallery-arrow-right">
+                    <i class="ri-arrow-right-s-line"></i>
+                </button>
+            </div>
          </section>
 
          <!--==================== CONTACT ====================-->
