--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                          <a href="#about" class="nav__link">About Me</a>
                      </li>
                      <li class="nav__item">
+                         <a href="#services" class="nav__link">Services</a>
+                     </li>
+                     <li class="nav__item">
                          <a href="#projects" class="nav__link">Projects</a>
                      </li>
                      <li class="nav__item">
@@ -58,6 +61,9 @@
                  </li>
                  <li class="nav__item">
                      <a href="#about" class="nav__link">About Me</a>
+                 </li>
+                 <li class="nav__item">
+                     <a href="#services" class="nav__link">Services</a>
                  </li>
                  <li class="nav__item">
                      <a href="#projects" class="nav__link">Projects</a>
