--- a/index.html
+++ b/index.html
@@ -259,6 +259,31 @@
         </section>
 
          <!--==================== PROJECTS ===================-->
+
+         <section class="projects section" id="projects">
+            <h2 class="section__title-3" style="text-align: center; width: 100%;">
+                <span>Projects</span>
+            </h2>
+
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">Slide 1</div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
+                    <div class="swiper-slide">Slide 4</div>
+                    <div class="swiper-slide">Slide 5</div>
+                    <div class="swiper-slide">Slide 6</div>
+                </div>
+
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+                
+                <div class="swiper-scrollbar"></div>
+            </div>
+
+
+         </section>
          <!--
          <section class="projects section" id="projects">
             <h2 class="section__title-3" style="text-align: center; width: 100%;">
