--- a/index.html
+++ b/index.html
@@ -456,88 +456,89 @@
             <p>University projects in Interaction Design as well as professional projects within the scope of Architectural Graphic Design</p>
           </div>
         </div>
-			<div class="row">
-				<div class="col-md-4">
-					<a href="https://www.stanberbec.lu" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-8.png); text-decoration: none;">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Independent Full-Stack Web Dev project</h3>
-							<span>click to visit</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4">
-					<a href="/pages/project-3-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg); text-decoration: none;">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Interactivity</h3>
-							<span>Course Journal Archive</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4">
-					<a href="/pages/project-1-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg); text-decoration: none;">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Increasing user engagement in WRC leveraging Interactive technologies</h3>
-							<span>Final Degree Thesis</span>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-md-8">
-					<a href="/pages/project-2-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg); text-decoration: none;">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3>Poppy the Shy Wall</h3>
-							<span>Studio II Course Hand-In PDF</span>
-						</div>
-					</a>
-					<div class="row">
-						<div class="col-md-6">
-						<div class="col-md-6">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
-								<div class="overlay"  href="images/project-5.jpg" target="_blank"></div>
-								<div class="text text-center p-4">
-									<h3>2D CAD &amp; 3D Modelling</h3>
-									<span>Mathendahl, Niederkorn, Luxembourg</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
-								<div class="overlay" href="images/project-6.jpg" target="_blank"></div>
-								<div class="text text-center p-4">
-									<h3>2D Illustrations and development of preliminary draft</h3>
-									<span>Remich, Luxembourg</span>
-								</div>
-							</div>
-						</div>
+		<div class="row">
+			<!-- First Row: 3 equal columns -->
+			<div class="col-md-4">
+				<a href="https://www.stanberbec.lu" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-8.png); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>Independent Full-Stack Web Dev project</h3>
+						<span>click to visit</span>
 					</div>
-    			</div>
-    			<div class="col-md-4">
-    				<div class="row">
-    					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
-		    					<div class="overlay" href="/pages/project-4-page.pdf" target="_blank"></div>
-			    				<div class="text text-center p-4">
-			    					<h3>Tangible &amp; Embodied Interaction (TEI)</h3>
-			    					<span>Course Journal Archive</span>
-			    				</div>
-		    				</div>
-	    				</div>
-	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-7.jpg);">
-		    					<div class="overlay" href="images/project-7.jpg" target="_blank"></div>
-			    				<div class="text text-center p-4">
-			    					<h3>2D CAD Drafting</h3>
-			    					<span>Rollingergrund, Luxembourg</span>
-			    				</div>
-		    				</div>
-	    				</div>
-    				</div>
-    			</div>
-    		</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="/pages/project-3-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>Interactivity</h3>
+						<span>Course Journal Archive</span>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="/pages/project-1-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>Increasing user engagement in WRC leveraging Interactive technologies</h3>
+						<span>Final Degree Thesis</span>
+					</div>
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<!-- Second Row: Poppy takes 8 columns, TEI takes 4 -->
+			<div class="col-md-8">
+				<a href="/pages/project-2-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>Poppy the Shy Wall</h3>
+						<span>Studio II Course Hand-In PDF</span>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="/pages/project-4-page.pdf" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>Tangible &amp; Embodied Interaction (TEI)</h3>
+						<span>Course Journal Archive</span>
+					</div>
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<!-- Third Row: 3 equal columns -->
+			<div class="col-md-4">
+				<a href="images/project-5.jpg" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>2D CAD &amp; 3D Modelling</h3>
+						<span>Mathendahl, Niederkorn, Luxembourg</span>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="images/project-6.jpg" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>2D Illustrations and development of preliminary draft</h3>
+						<span>Remich, Luxembourg</span>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-4">
+				<a href="images/project-7.jpg" target="_blank" class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-7.jpg); text-decoration: none;">
+					<div class="overlay"></div>
+					<div class="text text-center p-4">
+						<h3>2D CAD Drafting</h3>
+						<span>Rollingergrund, Luxembourg</span>
+					</div>
+				</a>
+			</div>
+		</div>
     	</div>
     </section>
 
